k8s/coma/apps/paperless-ngx/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: artichoke-cc-https
  hostnames:
    - paperless.artichoke.cc
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless-ngx
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: paperless-ngx-to-envoy-proxy-bouncer
  namespace: envoy-gateway-system
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: paperless-ngx
  to:
    - group: ""
      kind: Service
      name: envoy-proxy-bouncer
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: paperless-ngx-security
  namespace: paperless-ngx
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: paperless-ngx
  extAuth:
    grpc:
      backendRefs:
        - group: ""
          kind: Service
          name: envoy-proxy-bouncer
          port: 8080
          namespace: envoy-gateway-system
